--- a/css/app.css
+++ b/css/app.css
@@ -4,12 +4,13 @@
          }
 }
 
+
 .contact{
 padding: 70px;
 }
 
 .footer {
-  background: #fcfc03;
+  padding-top: 25px;	
   text-align: center;
 }
 
